fixed a bug with the password visibility function not reseting state when switching between the signup and login pages

--- a/frontend/static/css/_responsiveness.css
+++ b/frontend/static/css/_responsiveness.css
@@ -155,7 +155,7 @@ the css won't have as much reptitive code.
     }
 
     .contact-phone-num, .contact-email {
-        font-size: 20px;
+        font-size: 17px;
     }
 
     /* Profile Page*/
